--- a/myFirstProject/deshboard.xaml
+++ b/myFirstProject/deshboard.xaml
@@ -11,7 +11,7 @@
             <RowDefinition Height="29*"/>
             <RowDefinition Height="109*"/>
         </Grid.RowDefinitions>
-        <Canvas HorizontalAlignment="Left" Height="281" Margin="-351,-1,-121,0" VerticalAlignment="Top" Width="472" Background="#FFE8E0E0" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="3">
+        <Canvas HorizontalAlignment="Left" Height="225" Margin="-222,47,-105,0" VerticalAlignment="Top" Width="327" Background="#FFE8E0E0" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="3">
             <Canvas.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -20,7 +20,7 @@
                     <TranslateTransform Y="1.594"/>
                 </TransformGroup>
             </Canvas.RenderTransform>
-            <ProgressBar Height="36" Canvas.Left="-59" Value="{Binding  VM_Altimeter, Mode=OneWay}" Canvas.Top="109" Width="220" RenderTransformOrigin="0.5,0.5" Background="white" Foreground="#FF69E819" ValueChanged="ProgressBar_ValueChanged">
+            <ProgressBar Height="28" Canvas.Left="-45" Value="{Binding  VM_Altimeter, Mode=OneWay}" Canvas.Top="86" Width="164" RenderTransformOrigin="0.5,0.5" Background="white" Foreground="#FF69E819" ValueChanged="ProgressBar_ValueChanged">
                 <ProgressBar.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -30,16 +30,8 @@
                     </TransformGroup>
                 </ProgressBar.RenderTransform>
             </ProgressBar>
-            <TextBlock Canvas.Left="12" Canvas.Top="245" Text="altimeter" TextWrapping="Wrap" Height="30" Width="86" Background="#FF9D8F8F" FontSize="20" TextAlignment="Center"/>
-            <Ellipse Height="246" Canvas.Left="98" Stroke="Black" Canvas.Top="9" Width="363">
-                <Ellipse.Fill>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="Black"/>
-                        <GradientStop Color="#FFFFDBDB" Offset="1"/>
-                    </LinearGradientBrush>
-                </Ellipse.Fill>
-            </Ellipse>
-            <TextBlock Height="43" Canvas.Left="144" Canvas.Top="168" Text="pitch" TextWrapping="Wrap" Width="89" Foreground="#FFF48A8A" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center">
+            <TextBlock Canvas.Top="193" Text="altimeter" TextWrapping="Wrap" Height="30" Width="86" Background="#FF9D8F8F" FontSize="20" TextAlignment="Center"/>
+            <TextBlock Height="43" Canvas.Left="57" Canvas.Top="146" Text="pitch" TextWrapping="Wrap" Width="74" Foreground="#FFF48A8A" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center">
                 <TextBlock.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black"/>
@@ -47,7 +39,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Background>
             </TextBlock>
-            <TextBlock Height="45" Canvas.Left="324" Canvas.Top="50" Text="airspeed" TextWrapping="Wrap" Width="89" Foreground="#FFC08C8C" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center" LineHeight="48" LineStackingStrategy="MaxHeight" FontStretch="SemiCondensed" Cursor="ScrollNE" RenderTransformOrigin="0.539,0.486">
+            <TextBlock Height="45" Canvas.Left="197" Canvas.Top="94" Text="airspeed" TextWrapping="Wrap" Width="90" Foreground="#FFC08C8C" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center" LineHeight="48" LineStackingStrategy="MaxHeight" FontStretch="SemiCondensed" Cursor="ScrollNE" RenderTransformOrigin="0.539,0.486">
                 <TextBlock.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black"/>
@@ -55,7 +47,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Background>
             </TextBlock>
-            <TextBlock Height="43" Canvas.Left="324" Canvas.Top="168" Text="yaw" TextWrapping="Wrap" Width="89" Foreground="#FFEA6B6B" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center">
+            <TextBlock Height="43" Canvas.Left="224" Canvas.Top="146" Text="yaw" TextWrapping="Wrap" Width="84" Foreground="#FFEA6B6B" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center">
                 <TextBlock.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black"/>
@@ -63,7 +55,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Background>
             </TextBlock>
-            <TextBlock Height="45" Canvas.Left="144" Canvas.Top="51" Text="roll" TextWrapping="Wrap" Width="92" Foreground="#FFB78585" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center">
+            <TextBlock Height="43" Canvas.Left="139" Canvas.Top="146" Text="roll" TextWrapping="Wrap" Width="78" Foreground="#FFB78585" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center">
                 <TextBlock.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black"/>
@@ -71,8 +63,8 @@
                     </LinearGradientBrush>
                 </TextBlock.Background>
             </TextBlock>
-            <TextBox Canvas.Left="324" Canvas.Top="67" Text="{Binding VM_Airspeed, Mode=OneWay}"  TextWrapping="Wrap" Width="89" Height="22"  Background="{x:Null}" FontSize="18" FontWeight="Bold"  BorderBrush="{x:Null}" TextAlignment="Center" RenderTransformOrigin="1.434,0.113"/>
-            <TextBlock Height="45" Canvas.Left="230" Canvas.Top="108" Text="direction" TextWrapping="Wrap" Width="104" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center" Foreground="#FFEB9292" RenderTransformOrigin="1.209,0.197">
+            <TextBox Canvas.Left="198" Canvas.Top="115" Text="{Binding VM_Airspeed, Mode=OneWay}"  TextWrapping="Wrap" Width="90" Height="22"  Background="{x:Null}" FontSize="18" FontWeight="Bold"  BorderBrush="{x:Null}" TextAlignment="Center" RenderTransformOrigin="1.434,0.113"/>
+            <TextBlock Height="45" Canvas.Left="84" Canvas.Top="94" Text="direction" TextWrapping="Wrap" Width="104" FontSize="18" FontFamily="Arial Rounded MT Bold" FontWeight="SemiBold" FontStyle="Italic" TextAlignment="Center" Foreground="#FFEB9292" RenderTransformOrigin="1.209,0.197">
                 <TextBlock.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black"/>
@@ -80,12 +72,11 @@
                     </LinearGradientBrush>
                 </TextBlock.Background>
             </TextBlock>
-            <TextBlock Height="30" Canvas.Left="144" Canvas.Top="68" Text="{Binding VM_Roll, Mode=OneWay}" TextWrapping="Wrap" Width="89" FontSize="18" TextAlignment="Center" FontWeight="Bold" RenderTransformOrigin="1.4,0.313"/>
-            <TextBlock Height="25" Canvas.Left="230" Canvas.Top="128" Text="{Binding VM_Direction, Mode=OneWay}" TextWrapping="Wrap" Width="104" FontSize="18" FontWeight="Bold" TextAlignment="Center" RenderTransformOrigin="-0.315,0.381"/>
-            <TextBlock Height="30" Canvas.Left="144" Canvas.Top="188" Text="{Binding VM_Pitch, Mode=OneWay}" TextWrapping="Wrap" Width="89" FontSize="18" FontWeight="Bold" TextAlignment="Center" RenderTransformOrigin="0.164,0.56"/>
-            <TextBlock Height="30" Canvas.Left="324" Canvas.Top="188" Text="{Binding VM_Yaw, Mode=OneWay}" TextWrapping="Wrap" Width="89" FontSize="18" FontWeight="Bold" TextAlignment="Center" RenderTransformOrigin="2.176,0.113"/>
+            <TextBlock Height="30" Canvas.Left="138" Canvas.Top="160" Text="{Binding VM_Roll, Mode=OneWay}" TextWrapping="Wrap" Width="78" FontSize="18" TextAlignment="Center" FontWeight="Bold" RenderTransformOrigin="1.4,0.313"/>
+            <TextBlock Height="25" Canvas.Left="82" Canvas.Top="112" Text="{Binding VM_Direction, Mode=OneWay}" TextWrapping="Wrap" Width="104" FontSize="18" FontWeight="Bold" TextAlignment="Center" RenderTransformOrigin="-0.315,0.381"/>
+            <TextBlock Height="29" Canvas.Left="56" Canvas.Top="160" Text="{Binding VM_Pitch, Mode=OneWay}" TextWrapping="Wrap" Width="75" FontSize="18" FontWeight="Bold" TextAlignment="Center" RenderTransformOrigin="0.164,0.56"/>
+            <TextBlock Height="30" Canvas.Left="222" Canvas.Top="160" Text="{Binding VM_Yaw, Mode=OneWay}" TextWrapping="Wrap" Width="86" FontSize="18" FontWeight="Bold" TextAlignment="Center" RenderTransformOrigin="2.176,0.113"/>
 
         </Canvas>
-
     </Grid>
 </UserControl>
