--- a/myFirstProject/GraphControl.xaml
+++ b/myFirstProject/GraphControl.xaml
@@ -29,34 +29,34 @@
 
 
 
-            <ScrollViewer HorizontalAlignment="Left" Height="400" VerticalAlignment="Top" Width="200" VerticalScrollBarVisibility="Auto" OpacityMask="#FFE43A3A" Foreground="#FF1FB647" BorderBrush="#FF302EBF" >
-                <StackPanel x:Name="myStack" Height="auto" Width="200"  OpacityMask="#FF277144">
-                    <Button Content="show Graphs:" Click="showGraphs" Height="40" FontWeight="Bold"  />
+            <ScrollViewer HorizontalAlignment="Left" Height="400" VerticalAlignment="Top" Width="240" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" OpacityMask="#FFE43A3A" Foreground="#FF1FB647" BorderBrush="#FF302EBF" FontSize="11" >
+                <StackPanel x:Name="myStack" Height="auto" Width="240"  OpacityMask="#FF277144">
+                    <Button Content="show Graphs:" Click="showGraphs" Height="40" FontWeight="Bold" FontSize="16"  />
 
                 </StackPanel>
             </ScrollViewer>
 
             <Canvas  Grid.Row="0" Grid.Column="1" Height="450" Width="330">
-                <oxy:Plot x:Name="firs_plot" Height="150" Width="150"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" >
+                <oxy:Plot x:Name="firs_plot" Height="156" Width="330"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" TitleFontSize ="13" >
                     <oxy:Plot.Series>
                         <oxy:LineSeries x:Name="first_line" ItemsSource="{Binding VM_MainGraphList, Mode=OneWay}"/>
                     </oxy:Plot.Series>
                 </oxy:Plot>
 
 
-                <oxy:Plot x:Name="second_plot" Height="150" Width="150" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" Canvas.Left="155">
+                <oxy:Plot x:Name="second_plot" Height="153" Width="329" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" TitleFontSize="13" Canvas.Left="1" FontWeight="Bold" Canvas.Top="122">
                     <oxy:Plot.Series>
                         <oxy:LineSeries  ItemsSource="{Binding VM_SecondGraphList, Mode=OneWay}"/>
                     </oxy:Plot.Series>
                 </oxy:Plot>
 
-                
-                
-                <oxy:Plot Height="273" Width="273" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="10" Canvas.Top="155" >
+
+
+                <oxy:Plot Height="175" Width="329" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="1" Canvas.Top="275" >
                     <oxy:Plot.Series>
-                        <oxy:LineSeries  ItemsSource="{Binding VM_LineReg, Mode=OneWay}"/>
-                        <oxy:LineSeries  ItemsSource="{Binding VM_Points, Mode=OneWay}" Color="White"  MarkerSize="4" MarkerType="Circle" MarkerFill="Blue" BorderBrush="Black" />
-       
+
+                        <oxy:LineSeries  ItemsSource="{Binding VM_Points, Mode=OneWay}" Color="White"  MarkerSize="3" MarkerType="Circle" MarkerFill="DimGray" BorderBrush="Black" />
+                        <oxy:LineSeries  ItemsSource="{Binding VM_LineReg, Mode=OneWay}" Color="DarkBlue" />
                     </oxy:Plot.Series>
                 </oxy:Plot>
             </Canvas>
