--- a/myFirstProject/GraphControl.xaml
+++ b/myFirstProject/GraphControl.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" Width="524">
     <Canvas HorizontalAlignment="Left" Height="500" VerticalAlignment="Top" Width="500">
-        <Grid >
+        <Grid Height="444" >
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
@@ -37,14 +37,14 @@
             </ScrollViewer>
 
             <Canvas  Grid.Row="0" Grid.Column="1" Height="450" Width="330">
-                <oxy:Plot x:Name="firs_plot" Height="156" Width="330"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" TitleFontSize ="13" >
+                <oxy:Plot x:Name="firs_plot" Height="156" Width="330"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" TitleFontSize ="13" Canvas.Top="-4" >
                     <oxy:Plot.Series>
                         <oxy:LineSeries x:Name="first_line" ItemsSource="{Binding VM_MainGraphList, Mode=OneWay}"/>
                     </oxy:Plot.Series>
                 </oxy:Plot>
 
 
-                <oxy:Plot x:Name="second_plot" Height="153" Width="329" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" TitleFontSize="13" Canvas.Left="1" FontWeight="Bold" Canvas.Top="122">
+                <oxy:Plot x:Name="second_plot" Height="153" Width="329" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" TitleFontSize="13" Canvas.Left="1" FontWeight="Bold" Canvas.Top="130">
                     <oxy:Plot.Series>
                         <oxy:LineSeries  ItemsSource="{Binding VM_SecondGraphList, Mode=OneWay}"/>
                     </oxy:Plot.Series>
@@ -52,7 +52,7 @@
 
 
 
-                <oxy:Plot Height="175" Width="329" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="1" Canvas.Top="275" >
+                <oxy:Plot Height="165" Width="329" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="1" Canvas.Top="277" >
                     <oxy:Plot.Series>
 
                         <oxy:LineSeries  ItemsSource="{Binding VM_Points, Mode=OneWay}" Color="White"  MarkerSize="3" MarkerType="Circle" MarkerFill="DimGray" BorderBrush="Black" />
