--- a/myFirstProject/GraphControl.xaml
+++ b/myFirstProject/GraphControl.xaml
@@ -7,7 +7,7 @@
              xmlns:local="clr-namespace:myFirstProject"
              mc:Ignorable="d" 
              d:DesignHeight="450" Width="524">
-    <Canvas HorizontalAlignment="Left" Height="500" VerticalAlignment="Top" Width="500">
+    <Canvas HorizontalAlignment="Left" Height="500" VerticalAlignment="Top" Width="550">
 
 
         <Grid Height="444" >
@@ -34,30 +34,32 @@
 
 
 
-            <ScrollViewer HorizontalAlignment="Left" Height="176" VerticalAlignment="Top" Width="240" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" OpacityMask="#FFE43A3A" Foreground="#FF1FB647" BorderBrush="#FF302EBF" FontSize="11" >
+            <ScrollViewer HorizontalAlignment="Left" Height="248" VerticalAlignment="Top" Width="240" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" OpacityMask="#FFE43A3A" Foreground="#FF1FB647" BorderBrush="#FF302EBF" FontSize="11" >
                 <StackPanel x:Name="myStack" Height="auto" Width="240"  OpacityMask="#FF277144">
                     <Button Content="show Graphs:" Click="showGraphs" Height="40" FontWeight="Bold" FontSize="16"  />
 
                 </StackPanel>
             </ScrollViewer>
 
-            <Canvas  Grid.Row="0" Grid.Column="1" Height="450" Width="330">
-                <oxy:Plot x:Name="firs_plot" Height="156" Width="330"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" TitleFontSize ="13" Canvas.Top="-4" >
+            <Canvas  Grid.Row="0" Grid.Column="1" Height="500" Width="330">
+               
+                 <oxy:Plot x:Name="second_plot" Height="145" Width="329" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" TitleFontSize="13" Canvas.Left="1" FontWeight="Bold" Canvas.Top="128">
+                    <oxy:Plot.Series>
+                        <oxy:LineSeries  ItemsSource="{Binding VM_SecondGraphList, Mode=OneWay}"/>
+                    </oxy:Plot.Series>
+                </oxy:Plot>
+                <oxy:Plot x:Name="firs_plot" Height="145" Width="330"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" TitleFontSize ="13" Canvas.Top="-2" >
                     <oxy:Plot.Series>
                         <oxy:LineSeries x:Name="first_line" ItemsSource="{Binding VM_MainGraphList, Mode=OneWay}"/>
                     </oxy:Plot.Series>
                 </oxy:Plot>
 
 
-                <oxy:Plot x:Name="second_plot" Height="153" Width="329" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" TitleFontSize="13" Canvas.Left="1" FontWeight="Bold" Canvas.Top="130">
-                    <oxy:Plot.Series>
-                        <oxy:LineSeries  ItemsSource="{Binding VM_SecondGraphList, Mode=OneWay}"/>
-                    </oxy:Plot.Series>
-                </oxy:Plot>
+               
 
 
 
-                <oxy:Plot Height="165" Width="329" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="1" Canvas.Top="277" >
+                <oxy:Plot Background="Aqua" Height="230" Width="280" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="47" Canvas.Top="272" >
                     <oxy:Plot.Series>
 
                         <oxy:LineSeries  ItemsSource="{Binding VM_Points, Mode=OneWay}" Color="White"  MarkerSize="3" MarkerType="Circle" MarkerFill="DimGray" BorderBrush="Black" />
@@ -65,7 +67,7 @@
                     </oxy:Plot.Series>
                 </oxy:Plot>
 
-                <DockPanel x:Name="mydock" Background="Brown"  HorizontalAlignment="Left" Height="191" LastChildFill="False" VerticalAlignment="Top" Width="233" Grid.ColumnSpan="2" Canvas.Left="-237" Canvas.Top="212"/>
+                <DockPanel x:Name="mydock" Background="Brown"  HorizontalAlignment="Left" Height="230" LastChildFill="False" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="2" Canvas.Left="-237" Canvas.Top="270"/>
 
             </Canvas>
 
