--- a/myFirstProject/GraphControl.xaml
+++ b/myFirstProject/GraphControl.xaml
@@ -35,20 +35,20 @@
 
 
             <ScrollViewer HorizontalAlignment="Left" Height="248" VerticalAlignment="Top" Width="240" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" OpacityMask="#FFE43A3A" Foreground="#FF1FB647" BorderBrush="#FF302EBF" FontSize="11" >
-                <StackPanel x:Name="myStack" Height="auto" Width="240"  OpacityMask="#FF277144">
-                    <Button Content="show Graphs:" Click="showGraphs" Height="40" FontWeight="Bold" FontSize="16"  />
+                <StackPanel x:Name="myStack" Height="auto" Width="240"  Background="Transparent">
+                    <Button Content="show Graphs:" Click="showGraphs" Height="40" FontWeight="Bold" FontSize="16" Background="#66FFE7CB" />
 
                 </StackPanel>
             </ScrollViewer>
 
-            <Canvas  Grid.Row="0" Grid.Column="1" Height="500" Width="330">
-               
-                 <oxy:Plot x:Name="second_plot" Height="145" Width="329" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" TitleFontSize="13" Canvas.Left="1" FontWeight="Bold" Canvas.Top="128">
+            <Canvas  Grid.Row="0" Grid.Column="1" Height="500" Width="330" Background="#66FFE7CB" >
+
+                <oxy:Plot x:Name="second_plot" Background="#66FFE7CB" Height="145" Width="329" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" TitleFontSize="13" Canvas.Left="1" FontWeight="Bold" Canvas.Top="128">
                     <oxy:Plot.Series>
                         <oxy:LineSeries  ItemsSource="{Binding VM_SecondGraphList, Mode=OneWay}"/>
                     </oxy:Plot.Series>
                 </oxy:Plot>
-                <oxy:Plot x:Name="firs_plot" Height="145" Width="330"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" TitleFontSize ="13" Canvas.Top="-2" >
+                <oxy:Plot x:Name="firs_plot" Background="#66FFE7CB" Height="145" Width="330"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" TitleFontSize ="13" Canvas.Top="-2" >
                     <oxy:Plot.Series>
                         <oxy:LineSeries x:Name="first_line" ItemsSource="{Binding VM_MainGraphList, Mode=OneWay}"/>
                     </oxy:Plot.Series>
@@ -59,7 +59,7 @@
 
 
 
-                <oxy:Plot Background="Aqua" Height="230" Width="280" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="47" Canvas.Top="272" >
+                <oxy:Plot  Height="230" Width="280" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="47" Canvas.Top="272" OpacityMask="#FFCB2C2C" Background="Transparent" >
                     <oxy:Plot.Series>
 
                         <oxy:LineSeries  ItemsSource="{Binding VM_Points, Mode=OneWay}" Color="White"  MarkerSize="3" MarkerType="Circle" MarkerFill="DimGray" BorderBrush="Black" />
@@ -67,7 +67,7 @@
                     </oxy:Plot.Series>
                 </oxy:Plot>
 
-                <DockPanel x:Name="mydock" Background="Brown"  HorizontalAlignment="Left" Height="230" LastChildFill="False" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="2" Canvas.Left="-237" Canvas.Top="270"/>
+                <DockPanel x:Name="mydock" Background="Transparent"  HorizontalAlignment="Left" Height="230" LastChildFill="False" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="2" Canvas.Left="-237" Canvas.Top="270"/>
 
             </Canvas>
 
