--- a/myFirstProject/GraphControl.xaml
+++ b/myFirstProject/GraphControl.xaml
@@ -41,14 +41,14 @@
                 </StackPanel>
             </ScrollViewer>
 
-            <Canvas  Grid.Row="0" Grid.Column="1" Height="500" Width="330" Background="#66FFE7CB" >
+            <Canvas  Grid.Row="0" Grid.Column="1" Height="500" Width="315" Background="#66FFE7CB" Margin="12,0,-12.333,-56" >
 
-                <oxy:Plot x:Name="second_plot" Background="#66FFE7CB" Height="145" Width="329" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" TitleFontSize="13" Canvas.Left="1" FontWeight="Bold" Canvas.Top="128">
+                <oxy:Plot x:Name="second_plot" Background="Transparent" Height="145" Width="320" Title="{Binding VM_SecondGraphName, Mode=OneWay}" FontSize="10" Canvas.Right="10" TitleFontSize="13" Canvas.Left="-9" FontWeight="Bold" Canvas.Top="128">
                     <oxy:Plot.Series>
                         <oxy:LineSeries  ItemsSource="{Binding VM_SecondGraphList, Mode=OneWay}"/>
                     </oxy:Plot.Series>
                 </oxy:Plot>
-                <oxy:Plot x:Name="firs_plot" Background="#66FFE7CB" Height="145" Width="330"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" TitleFontSize ="13" Canvas.Top="-2" >
+                <oxy:Plot x:Name="firs_plot" Background="Transparent" Height="145" Width="320"  Title="{Binding VM_MainGraphName, Mode=OneWay}" FontSize="5" TitleFontSize ="13" Canvas.Top="-2" Canvas.Left="-10" >
                     <oxy:Plot.Series>
                         <oxy:LineSeries x:Name="first_line" ItemsSource="{Binding VM_MainGraphList, Mode=OneWay}"/>
                     </oxy:Plot.Series>
@@ -59,15 +59,15 @@
 
 
 
-                <oxy:Plot  Height="230" Width="280" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="47" Canvas.Top="272" OpacityMask="#FFCB2C2C" Background="Transparent" >
+                <oxy:Plot  Height="230" Width="260" Title="{Binding VM_Title1, Mode=OneWay}" Canvas.Bottom="10" Canvas.Left="27" Canvas.Top="272" OpacityMask="#FFCB2C2C" Background="Transparent" >
                     <oxy:Plot.Series>
 
-                        <oxy:LineSeries  ItemsSource="{Binding VM_Points, Mode=OneWay}" Color="White"  MarkerSize="3" MarkerType="Circle" MarkerFill="DimGray" BorderBrush="Black" />
+                        <oxy:LineSeries  ItemsSource="{Binding VM_Points, Mode=OneWay}" Color="Transparent"  MarkerSize="3" MarkerType="Circle" MarkerFill="DimGray" BorderBrush="Black" />
                         <oxy:LineSeries  ItemsSource="{Binding VM_LineReg, Mode=OneWay}" Color="DarkBlue" />
                     </oxy:Plot.Series>
                 </oxy:Plot>
 
-                <DockPanel x:Name="mydock" Background="Transparent"  HorizontalAlignment="Left" Height="230" LastChildFill="False" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="2" Canvas.Left="-237" Canvas.Top="270"/>
+                <DockPanel x:Name="mydock" Background="Transparent"  HorizontalAlignment="Left" Height="230" LastChildFill="False" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="2" Canvas.Left="-253" Canvas.Top="270"/>
 
             </Canvas>
 
