--- a/myFirstProject/MainWindow.xaml
+++ b/myFirstProject/MainWindow.xaml
@@ -10,45 +10,58 @@
         xmlns:Joystick ="clr-namespace:myFirstProject"
        
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800">
+        Title="MainWindow" Height="630" Width="auto">
 
     <Window.Background>
         <ImageBrush ImageSource="aircraft.jpg" Stretch="Fill" />
     </Window.Background>
-    <DockPanel>
+    <Grid VerticalAlignment="Top" Height="630" Width="800">
         
-        <Canvas  Height="523" VerticalAlignment="Top">
-        <Menu Canvas.Top="0" Canvas.Left="0">
-            <MenuItem Header="_File" FontSize="24" Width="186">
-                <MenuItem Header="_Upload train Csv File" Click="Open_Click" />
-                <MenuItem Header="_Upload test Csv File" Click="MenuItem_Click" />
-                <MenuItem Header="_Upload Xml File" Click="upload_Click" />
-                <MenuItem Header="load dll file" Click="MenuItem_Click_1"  />
-                <Separator />
-                <MenuItem Header="_Exit" />
-            </MenuItem>
-            <MenuItem Header="_Action" FontSize="24" Width="322">
-                <MenuItem Header="_Start" Click="Start_Click" />
-                <MenuItem Header="_Pause" Click="Pause_Click" />
-                <Separator />
-            </MenuItem>
-        </Menu>
-        <TextBox AcceptsReturn="True" />
-        <TextBox AcceptsReturn="True" />
-        <Joystick:JoystickControler x:Name="joystickCont" Canvas.Left="590" Height="161" Width="206" Canvas.Top="279" RenderTransformOrigin="0.5,0.5" >
-            <Joystick:JoystickControler.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform AngleX="0.254"/>
-                    <RotateTransform/>
-                    <TranslateTransform X="0.595"/>
-                </TransformGroup>
-            </Joystick:JoystickControler.RenderTransform>
-        </Joystick:JoystickControler>
-        <Deshboard:deshboard x:Name="deshboardCont" Width="160" Canvas.Left="598" Height="216" Canvas.Top="34" />
-        <Graphs:GraphControl x:Name="graphCont"  Width="530" Height="500" Canvas.Top="34" Loaded="graphCont_Loaded" />
-        <Slider:SliderControl x:Name="sliderCont"  Width="712" Height="42" Canvas.Top="528" Canvas.Left="-3"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="800" />
+            <ColumnDefinition Width="auto" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0" />
+            <RowDefinition Height="630" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+        <!--<DockPanel Height="630" Width="650" >-->
 
-    </Canvas>
-    </DockPanel>
+        <Canvas  Height="630" Width="800"  Grid.Column="1" Grid.Row="1"  >
+            <Menu Canvas.Top="0" Canvas.Left="0" Background="#9EF0F0F0">
+                <MenuItem Header="_File" FontSize="24" Width="120">
+                    <MenuItem Header="_Upload train Csv File" Click="Open_Click" />
+                    <MenuItem Header="_Upload test Csv File" Click="MenuItem_Click" />
+                    <MenuItem Header="_Upload Xml File" Click="upload_Click" />
+                    <MenuItem Header="load dll file" Click="MenuItem_Click_1"  />
+                    <Separator />
+                    <MenuItem Header="_Exit" />
+                </MenuItem>
+                <MenuItem Header="_Action" FontSize="24" Width="120">
+                    <MenuItem Header="_Start" Click="Start_Click" />
+                    <MenuItem Header="_Pause" Click="Pause_Click" />
+                    <Separator />
+                </MenuItem>
+            </Menu>
+           
+           
+            <Joystick:JoystickControler x:Name="joystickCont" Canvas.Left="588" Height="161" Width="190" Canvas.Top="279" RenderTransformOrigin="0.5,0.5" >
+                <Joystick:JoystickControler.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform AngleX="0.254"/>
+                        <RotateTransform/>
+                        <TranslateTransform X="0.595"/>
+                    </TransformGroup>
+                </Joystick:JoystickControler.RenderTransform>
+            </Joystick:JoystickControler>
+            <Deshboard:deshboard x:Name="deshboardCont" Width="160" Canvas.Left="598" Height="216" Canvas.Top="34" />
+            <Graphs:GraphControl x:Name="graphCont"  Width="530" Height="500" Canvas.Top="34"  />
+            <Slider:SliderControl x:Name="sliderCont"  Width="712" Height="42" Canvas.Top="528" Canvas.Left="-3"/>
+
+        </Canvas>
+        <!--</DockPanel>-->
+    </Grid>
 </Window>
